fix: fix dependencies errors
